--- a/index.html
+++ b/index.html
@@ -33,84 +33,84 @@
 <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active"  style="height: 500px;">
-      <img src="images/a-picture-containing-grass-mountain-nature-high.jpeg" class="d-block w-100" alt="Image 1">
+      <img src="a-picture-containing-grass-mountain-nature-high.jpeg" class="d-block w-100" alt="Image 1">
       <div class="carousel-caption d-none d-md-block">
         <h5>Beautiful Grass Mountains</h5>
         <p>Nature at its finest</p>
       </div>
     </div>
     <div class="carousel-item" style="height: 500px;">
-      <img src="images/arrang-kel.jpg" class="d-block w-100 " alt="Arrang Kel">
+      <img src="arrang-kel.jpg" class="d-block w-100 " alt="Arrang Kel">
       <div class="carousel-caption d-none d-md-block">
         <h5>Arrang Kel, Kashmir</h5>
         <p>Greenery and Serenity</p>
       </div>
     </div>
     <div class="carousel-item"  style="height: 500px;">
-      <img src="images/art-of-bad-shahi-mosque-lahore-photo.jpg.crdownload" class="d-block w-100" alt="Badshahi Mosque">
+      <img src="art-of-bad-shahi-mosque-lahore-photo.jpg.crdownload" class="d-block w-100" alt="Badshahi Mosque">
       <div class="carousel-caption d-none d-md-block">
         <h5>Badshahi Mosque</h5>
         <p>Historical Landmark of Lahore</p>
       </div>
     </div>
     <div class="carousel-item"  style="height: 500px;">
-      <img src="images/bg01-1024x583.jpg" class="d-block w-100" alt="Background 1">
+      <img src="bg01-1024x583.jpg" class="d-block w-100" alt="Background 1">
       <div class="carousel-caption d-none d-md-block">
         <h5>Stunning Landscapes</h5>
         <p>Feel the magic of nature</p>
       </div>
     </div>
     <div class="carousel-item"  style="height: 500px;">
-      <img src="images/fairy-Meadows-640x426-e1438022094776.jpg.crdownload" class="d-block w-100" alt="Fairy Meadows">
+      <img src="fairy-Meadows-640x426-e1438022094776.jpg.crdownload" class="d-block w-100" alt="Fairy Meadows">
       <div class="carousel-caption d-none d-md-block">
         <h5>Fairy Meadows</h5>
         <p>Heaven on Earth</p>
       </div>
     </div>
     <div class="carousel-item"  style="height: 500px;">
-      <img src="images/Faisal-Mosque.jpg" class="d-block w-100" alt="Faisal Mosque">
+      <img src="Faisal-Mosque.jpg" class="d-block w-100" alt="Faisal Mosque">
       <div class="carousel-caption d-none d-md-block">
         <h5>Faisal Mosque</h5>
         <p>Islamabad’s iconic mosque</p>
       </div>
     </div>
     <div class="carousel-item"  style="height: 500px;">
-      <img src="images/Gurdwara Darbar-min (1).jpg" class="d-block w-100" alt="Gurdwara Darbar Sahib 1">
+      <img src="Gurdwara Darbar-min (1).jpg" class="d-block w-100" alt="Gurdwara Darbar Sahib 1">
       <div class="carousel-caption d-none d-md-block">
         <h5>Gurdwara Darbar Sahib</h5>
         <p>Religious peace and architecture</p>
       </div>
     </div>
     <div class="carousel-item"  style="height: 500px;">
-      <img src="images/Gurdwara Darbar-min.jpg" class="d-block w-100" alt="Gurdwara Darbar Sahib 2">
+      <img src="Gurdwara Darbar-min.jpg" class="d-block w-100" alt="Gurdwara Darbar Sahib 2">
       <div class="carousel-caption d-none d-md-block">
         <h5>Gurdwara Darbar Sahib</h5>
         <p>Another beautiful view</p>
       </div>
     </div>
     <div class="carousel-item"  style="height: 500px;">
-      <img src="images/neelum-valley-tour.jpg" class="d-block w-100" alt="Neelum Valley">
+      <img src="neelum-valley-tour.jpg" class="d-block w-100" alt="Neelum Valley">
       <div class="carousel-caption d-none d-md-block">
         <h5>Neelum Valley</h5>
         <p>Hidden paradise of Azad Kashmir</p>
       </div>
     </div>
     <div class="carousel-item"  style="height: 500px;">
-      <img src="images/NEELUM-VALLEY-TOUR-PACKAGE.webp" class="d-block w-100" alt="Neelum Valley 2">
+      <img src="NEELUM-VALLEY-TOUR-PACKAGE.webp" class="d-block w-100" alt="Neelum Valley 2">
       <div class="carousel-caption d-none d-md-block">
         <h5>Neelum Valley</h5>
         <p>Another breathtaking view</p>
       </div>
     </div>
     <div class="carousel-item"  style="height: 500px;">
-      <img src="images/th.jpg" class="d-block w-100" alt="Tour Picture">
+      <img src="th.jpg" class="d-block w-100" alt="Tour Picture">
       <div class="carousel-caption d-none d-md-block">
         <h5>Natural Beauty</h5>
         <p>Mountains and rivers</p>
       </div>
     </div>
     <div class="carousel-item"  style="height: 500px;">
-      <img src="images/Tomb-of-Bibi-Jawindi.jpg" class="d-block w-100" alt="Tomb of Bibi Jawindi">
+      <img src="Tomb-of-Bibi-Jawindi.jpg" class="d-block w-100" alt="Tomb of Bibi Jawindi">
       <div class="carousel-caption d-none d-md-block">
         <h5>Tomb of Bibi Jawindi</h5>
         <p>Historical masterpiece in Uch Sharif</p>
@@ -142,7 +142,7 @@
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="images/arrang-kel.jpg" class="card-img-top" alt="Hunza Valley">
+          <img src="arrang-kel.jpg" class="card-img-top" alt="Hunza Valley">
           <div class="card-body">
             <h5 class="card-title">Hunza Valley</h5>
             <p class="card-text">Snow-capped peaks and lush green valleys await you.</p>
@@ -151,7 +151,7 @@
       </div>
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="images/Faisal-Mosque.jpg" class="card-img-top" alt="Lahore" height="270">
+          <img src="Faisal-Mosque.jpg" class="card-img-top" alt="Lahore" height="270">
           <div class="card-body">
             <h5 class="card-title">Lahore</h5>
             <p class="card-text">Cultural capital, offering forts, mosques and mouth-watering food.</p>
@@ -160,7 +160,7 @@
       </div>
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="images/neelum-valley-tour.jpg" class="card-img-top" alt="Karachi">
+          <img src="neelum-valley-tour.jpg" class="card-img-top" alt="Karachi">
           <div class="card-body">
             <h5 class="card-title">Karachi</h5>
             <p class="card-text">Enjoy beaches, museums, and vibrant nightlife.</p>
