--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     </div>
   </div>
 </section>
-
+<img src="https://raw.githubusercontent.com/username/repo/branch/path/to/image.jpg">
 <button onclick="topFunction()" id="topBtn" style="position:fixed;bottom:20px;right:30px;display:block; background: yellow; padding-left:20px; text-align:center">↑ Top</button>
 
 <!-- Footer -->
